@@ -65,6 +65,9 @@
    - markus@cvs.openbsd.org 2001/12/05 15:04:48
      [version.h]
      post 3.0.2
+   - markus@cvs.openbsd.org 2001/12/05 16:54:51
+     [compat.c match.c match.h]
+     make theo and djm happy: bye bye regexp
 
 20011126
  - (tim) [contrib/cygwin/README, openbsd-compat/bsd-cygwin_util.c,
@@ -6987,4 +6990,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1685 2001/12/06 18:02:59 mouring Exp $
+$Id: ChangeLog,v 1.1686 2001/12/06 18:06:05 mouring Exp $
